# bitclaw

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: picoclaw-reference.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: artifacts.rs  config.rs  discovery.rs  files.rs  mod.rs  sessions.rs
src-tauri/src/db/: artifacts.rs  mod.rs
src-tauri/src/db/migrations/: 001_init.sql  002_settings.sql
src-tauri/src/services/: config.rs  connection.rs  discovery.rs  gateway.rs  mod.rs
src/components/: icons.tsx
src/features/artifacts/: ArtifactsPage.tsx
src/features/chat/: ChatPage.tsx
src/features/config/: ConfigPage.tsx
src/features/files/: FilesPage.tsx
src/features/workspace/: WorkspacePage.tsx
src/lib/: api.ts
src/stores/: artifacts.ts  chat.ts  connection.ts  workspace.ts
