[package]
name = "bitclaw"
version = "0.1.0"
description = "BitClaw - Desktop shell for PicoClaw"
authors = ["sj"]
edition = "2021"

[lib]
name = "bitclaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
tokio-tungstenite = "0.26"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
thiserror = "2"
dirs = "6"
serde_yaml = "0.9"
tauri-plugin-dialog = "2.7.1"
chrono = "0.4.45"

